--- a/ecsite-g2/src/main/resources/templates/login/confirm.html
+++ b/ecsite-g2/src/main/resources/templates/login/confirm.html
@@ -3,6 +3,7 @@
  
 	 <head>
 	 	<meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css" th:href="@{/style.css}" >
 	 </head>
  
 	 <body th:object="${su}">
