--- a/ecsite-g2/src/main/resources/static/Manager_style.css
+++ b/ecsite-g2/src/main/resources/static/Manager_style.css
@@ -1,6 +1,6 @@
 /* ===== 共通設定 ===== */
 body {
-    background: #f4f4f4;
+    background: white;
     font-family: "メイリオ", Meiryo, sans-serif;
     margin: 0;
     padding: 0;
@@ -88,19 +88,6 @@ input:focus {
     background-color: #f0fff4;
 }
 
-button[type="submit"] {
-    padding: 12px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 24px;
-    font-size: 16px;
-    cursor: pointer;
-}
-
-button[type="submit"]:hover {
-    background-color: #45a047;
-}
 
 .error {
     color: red;
@@ -125,8 +112,10 @@ button[type="submit"]:hover {
 }
 
 .item-row {
-    display: flex;
+	display: flex;
     margin-bottom: 8px;
+    padding-bottom: 10px;
+    border-bottom: 1px dashed #cacaca;
 }
 
 .item-row .label {
@@ -150,8 +139,9 @@ button[type="submit"]:hover {
 }
 
 .table-wrapper {
-    background-color: #fff;
+    background-color: #efefef;
     margin: 20px auto;
+	margin-top: 100px;
     padding: 20px;
     width: 90%;
     max-width: 1000px;
@@ -181,9 +171,19 @@ button[type="submit"]:hover {
 }
 
 .customer-table a {
-    color: #4CAF50;
+    color: #ffffff;
     text-decoration: none;
     font-weight: bold;
+    background: gray;
+    padding: 5px;
+    font-size: small;
+    border-radius: 10px;
+	transition: background 200ms,color 200ms, transform 200ms;
+}
+
+.customer-table a:hover {
+	background-color: rgb(128, 128, 128); /* 悬浮时浅灰背景 */
+	transform: scale(1.05);
 }
 
 .customer-table a:hover {
