--- a/ecsite-g2/src/main/resources/templates/index.html
+++ b/ecsite-g2/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 	 <head>
 	 	<meta charset="utf-8" />
 		<link rel="stylesheet" th:href="@{/login.css}">
+		<link rel="stylesheet" href="style.css" th:href="@{/style.css}" >
 	 </head>
  
 	 <body>
@@ -12,23 +13,27 @@
 			<a href="">TEAM2SITE</a>
 		</header>
 		
-		<main>	
-			<form method="post" th:action="@{/login}" th:object="${su}">
-				<div>ログイン</div>
-				<!-- エラーメッセージ表示 -->
-				<div th:if="${error}" style="color: red;" class="error">
-					<p th:text="${error}"></p>
-				</div>
-				<p><input type="text" th:field="*{phone_number}" placeholder="メールアドレスまたは携帯電話番号"></p>
-				<p><input type="password" th:field="*{password}" placeholder="パスワード"></p>
-				<input type="submit" value="ログイン">
-			</form>
+		<main>
+			<div class="loginBox">
+				<form method="post" th:action="@{/login}" th:object="${su}">
+					<div>ログイン</div>
+					<!-- エラーメッセージ表示 -->
+					<div th:if="${error}" style="color: red;" class="error">
+						<p th:text="${error}"></p>
+					</div>
+					<p><input type="text" th:field="*{phone_number}" placeholder="メールアドレスまたは携帯電話番号"></p>
+					<p><input type="password" th:field="*{password}" placeholder="パスワード"></p>
+					<input type="submit" value="ログイン">
+				</form>
+			</div>
 			
 			
 			<div class="text2">はじめてご利用の方</div>
-			<form action="#" method="get" th:action="@{/signIn}">
-				<input type="submit" value="新規会員登録">
-			</form>
+			<div class="loginBox">
+				<form action="#" method="get" th:action="@{/signIn}">
+					<input type="submit" value="新規会員登録">
+				</form>
+			</div>
 		</main>
 		
 		<footer>
