--- a/ecsite-g2/src/main/resources/templates/no_permission.html
+++ b/ecsite-g2/src/main/resources/templates/no_permission.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>アクセスエラー</title>
+	<link rel="stylesheet" href="style.css" th:href="@{/style.css}" >
 </head>
 <body>
 	<p>管理者権限が必要です。</p>
