--- a/ecsite-g2/src/main/resources/templates/login/confirm.html
+++ b/ecsite-g2/src/main/resources/templates/login/confirm.html
@@ -38,7 +38,7 @@
 					</tr>
 				</table>
 			
-			<form action="#" method="get" th:action="@{/login}">
+			<form action="#" method="get" th:action="@{/complete}">
 				<input type="hidden" th:field="*{nickName}">
 				<input type="hidden" th:field="*{password}">
 				<input type="hidden" th:field="*{adminFlag}">
