--- a/ecsite-g2/src/main/resources/static/style.css
+++ b/ecsite-g2/src/main/resources/static/style.css
@@ -256,6 +256,13 @@ body {
     margin-top: 15px;
 }
 
+.submit_btn:disabled {
+	    background-color: #cccccc;  /* 灰色背景 */
+	    color: #666666;             /* 浅灰色文字 */
+	    cursor: not-allowed;        /* 不允许点击的鼠标指针 */
+	    opacity: 0.7;               /* 半透明效果 */
+	}
+
 	
 .submit_btn:hover {
 	    background-color: rgb(150, 187, 228);
