--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -86,7 +86,7 @@
 	    <div class="section">
 	      <div class="section-title">その他</div>
 	      <div class="info-item">
-	        <div class="info-label">クレジットカード番号</div>
+	        <div class="info-label">カード番号</div>
 	        <div class="info-value" th:text="${info.creditNumber}"></div>
 	      </div>
 	    </div>
