--- a/ecsite-g2/src/main/resources/templates/manager_customer_detail.html
+++ b/ecsite-g2/src/main/resources/templates/manager_customer_detail.html
@@ -70,7 +70,9 @@
 
 		  <!-- サイドバー -->
 		  <div class="sidebar" id="sidebar">
-		  			<button class="info-check">情報確認</button>
+			<form th:action="@{/mypage}" method="post">
+			  <button type="submit" class="info-check">情報確認</button>
+			</form>
 		  			<form th:action="@{/mypage/edit}" method="post">
 		  			  <button type="submit" class="info-check">情報編集</button>
 		  			</form>
@@ -87,7 +89,7 @@
 	
 	
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		  <script src="script.js" th:src="@{/script.js}"></script>
+	<script src="script.js" th:src="@{/script.js}"></script>
     <script>
         function confirmLogout() {
             if (confirm("ログアウトしますか？")) {
