--- a/ecsite-g2/src/main/resources/templates/login/confirm.html
+++ b/ecsite-g2/src/main/resources/templates/login/confirm.html
@@ -10,7 +10,7 @@
 	 <body th:object="${su}">
 		
 		<header>
-			<a href="">TEAM2SITE</a>
+			<a href="">ZOOTOWN</a>
 		</header>
 						
 		<h2 class="text">会員情報確認</h2>
