--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -100,19 +100,10 @@
 	
 	<!-- カバー -->
 	  <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
-
-	  <!-- サイドバー -->
-	  <div class="sidebar" id="sidebar">
-		<button class="current info-check">情報確認</button>
-		<form th:action="@{/mypage/edit}" method="post">
-		  <button type="submit" class="info-check">情報編集</button>
-		</form>
-		
-		<!-- 管理者専用 -->
-		  <form th:if="${isAdmin}" th:action="@{/manager/customerlist}" method="get">
-		    <button type="submit" class="info-check">顧客一覧</button>
-		  </form>
-	  </div>
+	  <div id="info_check"></div>
+	  	<script th:if="${isAdmin}" th:inline="javascript">
+	  		    window.isAdmin = true;
+	  	</script>
 	  
 	  <footer>
 	  	<div>@TEAM2,Inc.</div>
