アドレス　バック

--- a/ecsite-g2/src/main/resources/templates/mypage/editAddress.html
+++ b/ecsite-g2/src/main/resources/templates/mypage/editAddress.html
@@ -20,30 +20,30 @@
 					  <div class="info-item">
 					    <label class="info-label" for="postNumber1">郵便番号</label>
 					    <input class="check" type="text" id="postNumber1" name="postNumber1" data-name="postNumber1" maxlength="3" pattern="\d{3}" 
-					           th:value="${#strings.substring(info.postNumber, 0, 3)}" /> -
+					           th:value="${#strings.substring(address.postNumber, 0, 3)}" /> -
 					    <input class="check" type="text" id="postNumber2" name="postNumber2" data-name="postNumber2" maxlength="4" pattern="\d{4}" 
-					           th:value="${#strings.substring(info.postNumber, 3, 7)}" />
+					           th:value="${#strings.substring(address.postNumber, 3, 7)}" />
 					  </div>
 				      <div class="info-item">
 				        <label class="info-label" for="address1">住所1</label>
-				        <input class="check" type="text" id="address1" name="address1" data-name="address1" th:value="${info.address1}" />
+				        <input class="check" type="text" id="address1" name="address1" data-name="address1" th:value="${address.address1}" />
 				      </div>
 				      <div class="info-item">
 				        <label class="info-label" for="address2">住所2</label>
-				        <input class="check" type="text" id="address2" name="address2" data-name="address2" th:value="${info.address2}" />
+				        <input class="check" type="text" id="address2" name="address2" data-name="address2" th:value="${address.address2}" />
 				      </div>
 				      <div class="info-item">
 				        <label class="info-label" for="address3">住所3</label>
-				        <input class="check" type="text" id="address3" name="address3" data-name="address3" th:value="${info.address3}" />
+				        <input class="check" type="text" id="address3" name="address3" data-name="address3" th:value="${address.address3}" />
 				      </div>
 				      <div class="info-item">
 				        <label class="info-label" for="address4">住所4</label>
-				        <input class="check" type="text" id="address4" name="address4" data-name="address4" th:value="${info.address4}" />
+				        <input class="check" type="text" id="address4" name="address4" data-name="address4" th:value="${address.address4}" />
 				      </div>
 				    </div>
 			
 			<div class="flex" style="margin-top: 40px;">
-			<form th:action="@{/mypage/updateAddress}" method="post">
+			<form th:action="@{/mypage/editAddress/update}" method="post">
 				<button class="submit_btn" type="submit" form="editForm" id="submit">保存する</button>
 			</form>
 			</div>
@@ -55,19 +55,13 @@
 			
 		
 		<!-- カバー -->
-		<div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
-
 		<!-- サイドバー -->
-		<div class="sidebar" id="sidebar">
-			<button class="current info-check">情報確認</button>
-			<form th:action="@{/mypage/edit}" method="post">
-				<button type="submit" class="info-check">情報編集</button>
-			</form>
+			<div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+			<div id="info_edit"></div>
+			<script th:if="${isAdmin}" th:inline="javascript">
+				    window.isAdmin = true;
+			</script>
 				
-		<!-- 管理者専用 -->
-		<form th:if="${isAdmin}" th:action="@{/manager/customerlist}" method="get">
-			<button type="submit" class="info-check">顧客一覧</button>
-		</form>
 		</div>
 			  
 		<footer>
