--- a/ecsite-g2/src/main/resources/templates/mypage/addAddress.html
+++ b/ecsite-g2/src/main/resources/templates/mypage/addAddress.html
@@ -14,16 +14,16 @@
 			</div>
 		</header>
 		
-		
+		<form th:action="@{/mypage/addAddress/{addressID}/insert(addressID=${address.addressID})}" method="post">
 		<!-- 住所情報 -->
 	    <div class="section" style="margin-top: 120px;">
 	      <div class="section-title">住所</div>
 		  <div class="info-item">
 		    <label class="info-label" for="postNumber1">郵便番号</label>
 		    <input class="check" type="text" id="postNumber1" name="postNumber1" data-name="postNumber1" maxlength="3" pattern="\d{3}" 
-		           th:value="${#strings.substring(address.postNumber, 0, 3)}" /> -
+		           th:value="${postNumber1}" /> -
 		    <input class="check" type="text" id="postNumber2" name="postNumber2" data-name="postNumber2" maxlength="4" pattern="\d{4}" 
-		           th:value="${#strings.substring(address.postNumber, 3, 7)}" />
+		           th:value="${postNumber2}" />
 		  </div>
 	      <div class="info-item">
 	        <label class="info-label" for="address1">住所1</label>
@@ -44,10 +44,11 @@
 	    </div>
 		
 		<div class="flex" style="margin-top: 40px;">
-		<form th:action="@{/mypage/addAddress/insert}" method="post">
-			<button class="submit_btn" type="submit" form="editForm" id="submit">保存する</button>
-		</form>
+		
+			<button class="submit_btn" type="submit" id="submit">保存する</button>
+		
 		</div>
+		</form>
 		<div class="flex">
 		<form th:action="@{/mypage}" method="post">
 			<button class="submit_btn" type="submit">戻る</button>
