--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -82,14 +82,14 @@
 		      </div>
 
 		      <!-- 住所編集 -->
-		      <form th:action="@{/mypage/editAddress/__${id}__}" method="post">
+		      <form th:action="@{/mypage/editAddress/__${res.addressID}__}" method="post">
 		        <button type="submit">住所編集</button>
 		      </form>
 		    </div> <!-- section2 終了 -->
 		  </div> <!-- each 終了 -->
 
 		  <!-- 「新しいお届け先住所を追加する」は常に表示 -->
-		  <form th:action="@{/mypage/addAddress/__${id}__}" method="post">
+		  <form th:action="@{/mypage/addAddress/__${newAddressID}__}" method="post">
 		    <button type="submit">新しいお届け先住所を追加する</button>
 		  </form>
 		</div> <!-- section 終了 -->
