--- a/ecsite-g2/src/main/resources/static/style.css
+++ b/ecsite-g2/src/main/resources/static/style.css
@@ -163,6 +163,15 @@ body {
 	    border-radius: 6px;
 	    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
       }
+	  
+	  .section2 {
+	  	background-color: #fff;
+	  	    width: 500px;
+	  	    margin: 0 auto 20px;
+	  	    padding: 30px 25px;
+	  	    border-radius: 6px;
+	  	    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+	        }
       .section-title {
 		font-size: 1.2em;
 		    font-weight: bold;
