--- a/ecsite-g2/src/main/resources/templates/mypage.html
+++ b/ecsite-g2/src/main/resources/templates/mypage.html
@@ -90,7 +90,7 @@
 
 		  <!-- 「新しいお届け先住所を追加する」は常に表示 -->
 		  <form th:action="@{/mypage/addAddress/__${newAddressID}__}" method="post">
-		    <button type="submit">新しいお届け先住所を追加する</button>
+		    <button type="submit" class="submit_btn">新しいお届け先住所を追加する</button>
 		  </form>
 		</div> <!-- section 終了 -->
 
