--- a/ecsite-g2/src/main/resources/templates/item_list.html
+++ b/ecsite-g2/src/main/resources/templates/item_list.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>商品一覧</title>
     <link rel="stylesheet" th:href="@{/shop.css}">
+	<link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
 
@@ -21,6 +22,28 @@
         </div>
     </div>
 </div>
+
+<header>
+	<div class="mp_header">
+		<div class="sidebar_btn">三</div>
+		<div class="header_title">マイページ</div>
+		<div class="linkBox">
+			<a th:href="@{/login}" class="logout-link">ログアウト</a>
+		</div>
+	</div>
+</header>
+
+  <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+  <div id="info_check"></div>
+  	<script th:if="${isAdmin}" th:inline="javascript">
+  		    window.isAdmin = true;
+  	</script>
+  
+  <footer>
+  	<div>@TEAM2,Inc.</div>
+  </footer>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js" th:src="@{/script.js}"></script>
 
 </body>
 </html>
