--- a/ecsite-g2/src/main/resources/static/shop.css
+++ b/ecsite-g2/src/main/resources/static/shop.css
@@ -14,8 +14,11 @@ h1 {
     text-align: center;
     color: #444;
     margin: 20px 0 30px;
+	margin-top: 80px;
     font-size: 28px;
+	
 }
+
 
 /* 商品テーブル */
 table {
@@ -51,6 +54,7 @@ td img {
     justify-content: center;
     gap: 20px;
     padding: 20px;
+	
 }
 
 .product-card {
