--- a/ecsite-g2/src/main/resources/templates/cart.html
+++ b/ecsite-g2/src/main/resources/templates/cart.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>カート</title>
 	<link rel="stylesheet" th:href="@{/shop.css}">
+	<link rel="stylesheet" th:href="@{/style.css}">
 </head>
 <body>
     <h1>カートの中身</h1>
@@ -33,5 +34,28 @@
         <a href="/items">＜ 商品一覧に戻る</a> |
         <a href="/purchase">レジへ進む ＞</a>
     </div>
+	
+	
+	<header>
+		<div class="mp_header">
+			<div class="sidebar_btn">三</div>
+			<div class="header_title">マイページ</div>
+			<div class="linkBox">
+				<a th:href="@{/login}" class="logout-link">ログアウト</a>
+			</div>
+		</div>
+	</header>
+
+	  <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
+	  <div id="top"></div>
+	  	<script th:if="${isAdmin}" th:inline="javascript">
+	  		    window.isAdmin = true;
+	  	</script>
+	  
+	  <footer>
+	  	<div>@TEAM2,Inc.</div>
+	  </footer>
+	  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	  <script src="script.js" th:src="@{/script.js}"></script>
 </body>
 </html>
