--- a/ecsite-g2/src/main/resources/templates/item_list.html
+++ b/ecsite-g2/src/main/resources/templates/item_list.html
@@ -34,7 +34,7 @@
 </header>
 
   <div class="overlay" id="overlay" onclick="toggleSidebar()"></div>
-  <div id="info_check"></div>
+  <div id="top"></div>
   	<script th:if="${isAdmin}" th:inline="javascript">
   		    window.isAdmin = true;
   	</script>
