--- a/ecsite-g2/src/main/resources/templates/mypage/addAddress.html
+++ b/ecsite-g2/src/main/resources/templates/mypage/addAddress.html
@@ -50,9 +50,7 @@
 		</div>
 		</form>
 		<div class="flex">
-		<form th:action="@{/mypage}" method="post">
-			<button class="submit_btn" type="submit">戻る</button>
-		</form>
+			<button class="submit_btn" type="submit" onclick="history.back()">戻る</button>
 		</div>
 		
 		<!-- サイドバー -->
