--- a/ecsite-g2/src/main/resources/templates/item_list.html
+++ b/ecsite-g2/src/main/resources/templates/item_list.html
@@ -26,9 +26,12 @@
 <header>
 	<div class="mp_header">
 		<div class="sidebar_btn">三</div>
-		<div class="header_title">マイページ</div>
+		<div class="header_title">ZOOTOWN</div>
 		<div class="linkBox">
-			<a th:href="@{/login}" class="logout-link">ログアウト</a>
+			<a th:href="@{/login}" class="logout-link">マイページ</a>
+		</div>
+		<div class="linkBox2">
+			<a th:href="@{/cart}" class="logout-link">カート</a>
 		</div>
 	</div>
 </header>
