--- a/ecsite-g2/src/main/resources/templates/cart.html
+++ b/ecsite-g2/src/main/resources/templates/cart.html
@@ -5,6 +5,14 @@
     <title>カート</title>
 	<link rel="stylesheet" th:href="@{/shop.css}">
 	<link rel="stylesheet" th:href="@{/style.css}">
+	<style>
+	  table {
+	    border-collapse: collapse; /* 枠線を重ねて表示 */
+	  }
+	  table, th, td {
+	    border: 1px solid black; /* tableとth、tdすべてに1pxの黒枠を付ける */
+	  }
+	</style>
 </head>
 <body>
     <h1>カートの中身</h1>
@@ -30,16 +38,16 @@
 
     <p>合計金額: <strong><span th:text="${total}"></span>円</strong></p>
 
-    <div>
-        <a href="/items">＜ 商品一覧に戻る</a> |
-        <a href="/purchase">レジへ進む ＞</a>
-    </div>
+	<div style="text-align: center;"><a href="/purchase" class="submit_btn">レジへ進む </a></div>
+    <div style="text-align: center;"><a href="/items" class="submit_btn">↪戻る</a></div>
+    
+    
 	
 	
 	<header>
 		<div class="mp_header">
 			<div class="sidebar_btn">三</div>
-			<div class="header_title">マイページ</div>
+			<div class="header_title">ZOOTOWN</div>
 			<div class="linkBox">
 				<a th:href="@{/login}" class="logout-link">ログアウト</a>
 			</div>
